# docs/swagger.json
@@ -249,6 +249,12 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Permission"
+                    }
                 }
             }
         },
