# domain/model/model.go
@@ -23,16 +23,25 @@ func (u User) VerifyPassword(password string) bool {
 	return hashedInputPassword == u.Password
 }
 
-// Permission represents a dada structure
+// Permission represents a data structure
 type Permission struct {
 	ID    uint   `json:"id" gorm:"primaryKey;autoIncrement"`
 	Name  string `json:"name" gorm:"unique"`
-	Roles []Role `json:"roles" gorm:"foreignKey:PermissionID"`
+	Roles []Role `json:"roles" gorm:"many2many:permissions_roles;"`
 }
 
-// Role represents a dada structure
+// Role represents a data structure
 type Role struct {
-	ID           uint   `json:"id" gorm:"primaryKey;autoIncrement"`
-	Name         string `json:"name" gorm:"unique"`
-	PermissionID uint   `json:"-" gorm:"column:permission_id;not null"`
+	ID          uint         `json:"id" gorm:"primaryKey;autoIncrement"`
+	Name        string       `json:"name" gorm:"unique"`
+	Permissions []Permission `json:"permissions" gorm:"many2many:permissions_roles;"`
+}
+
+type PermissionRole struct {
+	PermissionID uint `gorm:"primaryKey"`
+	RoleID       uint `gorm:"primaryKey"`
+}
+
+func (PermissionRole) TableName() string {
+	return "permissions_roles"
 }
